--- a/案例/盒子模型.html
+++ b/案例/盒子模型.html
@@ -19,10 +19,24 @@
             line-height:36px;
             box-sizing: border-box;
         }
+        .parent{
+            width:600px;
+            height:600px;
+            border:1px solid #000;
+            position: relative;
+        }
     </style>
 </head>
 <body>
-    <div id="box" class="box">
+    <div id="parent" class="parent">
+        <div id="box" class="box">
+            夫君子之行，静以修身，俭以养德。非淡泊无以明志，非宁静无以致远。夫学须静也，才须学也，非学无以广才，非志无以成学。淫慢则不能励精，险躁则不能治性。年与时驰，意与日去，遂成枯落，多不接世，悲守穷庐，将复何及！
+        </div>
+    </div>
+    <div id="box2" class="box">
+        夫君子之行，静以修身，俭以养德。非淡泊无以明志，非宁静无以致远。夫学须静也，才须学也，非学无以广才，非志无以成学。淫慢则不能励精，险躁则不能治性。年与时驰，意与日去，遂成枯落，多不接世，悲守穷庐，将复何及！
+    </div>
+    <div id="box3" class="box">
         夫君子之行，静以修身，俭以养德。非淡泊无以明志，非宁静无以致远。夫学须静也，才须学也，非学无以广才，非志无以成学。淫慢则不能励精，险躁则不能治性。年与时驰，意与日去，遂成枯落，多不接世，悲守穷庐，将复何及！
     </div>
 </body>
