--- a/案例/test.html
+++ b/案例/test.html
@@ -309,7 +309,7 @@
         fn.call("hello",1,2);
         fn.call("hello",[1,2]);*/
 
-        function Animal(type){
+       /*  function Animal(type){
             this.type=type;
         }
         Animal.prototype.say=function(){
@@ -324,9 +324,17 @@
         }
         //let animal=new Animal("哺乳类");
         let animal=mockNew(Animal,"哺乳类")
-        console.log(animal);
-
+        console.log(animal); */
+        var value=1;
+        function foo(){
+            console.log(value);
+        }
+        function bar(){
+            var value=2;
+            foo();
+        }
+        bar();//=>1
 
     </script>
 </body>
-</html>c
+</html>
