--- a/案例/index.html
+++ b/案例/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="singletonPattern.js"></script>
+    <script></script>
 </body>
 </html>
