--- a/案例/index.html
+++ b/案例/index.html
@@ -1,11 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script></script>
-</body>
-</html>
+<!-- <link rel="stylesheet" href="//css.gomein.net.cn/eccms/css/topics_css/temporary/1414010471.css">
+<script type="text/javascript" src="//js.gomein.net.cn/eccms/js/topics_js/temporary/1071641992.js"></script>
+<script id="variable" type="text/javascript">
+    var novar='nouser'#foreach($pKey in ${templateInfo.vmStyleMap.keySet()}),$!{pKey}='${templateInfo.vmStyleMap.get($pKey)}'#end;
+    var environment='commerce',targetType ='Production',contentLabels='Catalog',language='chinese';
+</script>
+<div class="w990">
+  <ul class="bombBox_four">
+  #foreach($skuElement in ${templateInfo.skuList})
+    <li>
+      <a href="$!{skuElement.picHref}" target="_blank" title="$!{skuElement.skuName}">
+        <img src="$!{skuElement.skuPic}_800.jpg" alt="$!{skuElement.skuName}" width="210" height="210">
+        <h3>$!{skuElement.skuName}</h3>
+        <h4>#if(${skuElement.description} != '""')$!{skuElement.description}#end</h4>
+        <span>￥<font id="zdy_rp_$!{skuElement.skuId}"></font></span>
+        <p>购买</p>
+      </a>
+      <span></span>
+    </li>
+  #end
+  </ul>
+</div>
+<script type="text/javascript">
+    g$("header",function(){
+        $('#$!{templateInfo.divId}').gLoad({e:function(){
+            loadZdyGoodsInfo("$!{templateInfo.loadPriceSkuIds}");
+        }});
+    });
+</script>
+
+ -->
+
+ <style type="text/css">
+    .wrapper {position: relative;}
+    #input {position: absolute;top: 0;left: 0;opacity: 0;z-index: -10;}
+   </style>
+    
+   <div class="wrapper">
+    <p id="text">我把你当兄弟你却想着复制我？</p>
+    <textarea id="input">这是幕后黑手</textarea>
+    <button onclick="copyText()">copy</button>
+   </div>
+   <script type="text/javascript">
+    function copyText() {
+     var text = document.getElementById("text").innerText;
+     var input = document.getElementById("input");
+     input.value = text; // 修改文本框的内容
+     input.select(); // 选中文本
+     document.execCommand("copy"); // 执行浏览器复制命令
+     alert("复制成功");
+    }
+    </script>
