--- a/案例/test.html
+++ b/案例/test.html
@@ -500,7 +500,7 @@
         reg="/^@"+type+"@$/";
         console.log(eval(reg).test("@candy@"));//=>true */
 
-        let str="goodgoodstudy,daydayupoh!";
+        /* let str="goodgoodstudy,daydayupoh!"; */
         /* let obj={};
         [].forEach.call(str,(item)=>{
             if(typeof obj[item]!=="undefined"){
@@ -536,7 +536,7 @@
             res.push(ary[i].substr(0,1));
         } */
         //=>第三种方法：
-        let  max=0,
+       /*  let  max=0,
         res=[];
         while(str){
             let oldStrLen=str.length;
@@ -550,7 +550,39 @@
                 res.push(letter);
             }
         }
-        console.log(`出现的次数最多的字母是${res}，出现了${max}次。`)
+        console.log(`出现的次数最多的字母是${res}，出现了${max}次。`) */
+
+        //千分符
+        ~function(){
+            /* function millimeter(){
+                let ary=this.split("").reverse();
+                for(let i=3;i<ary.length;i+=4){
+                    ary.splice(i,0,",");
+                }
+                return ary.reverse().join("");
+            } */
+            /* function millimeter(){
+                let ary=this.split("");
+                for(let i=ary.length-3;i>0;i-=3){
+                    ary.splice(i,0,",")
+                }
+                return ary.join("");
+            } */
+            /* function millimeter(){
+                let reg=new RegExp("(\\d{"+(this.length%3)+"})");
+                let newS=this.replace(reg,"$1,").replace(/(\d{3})/g,"$1,")
+                return newS.substr(0,newS.length-1)
+            } */
+            function millimeter(){
+                let reg=/\d{1,3}(?=(\d{3})+$)/g;
+                return this.replace(/\d{1,3}(?=(\d{3})+$)/g,(content)=>{
+                    return content+","
+                })
+            } 
+            String.prototype.millimeter=millimeter;
+        }()
+        let num="12345678909876544";
+        console.log(num.millimeter());
     </script> 
 </body>
 </html>
